<resources>
    <string name="app_name">Travel Guide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="banner_head">Where\'s your next destination?</string>
    <string name="deals">Deals</string>
    <string name="hotels">Hotels</string>
    <string name="filgts">Filgts</string>
    <string name="all">All</string>
    <string name="transportations">Transportations</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="trip">Trip</string>
    <string name="guide">Guide</string>
    <string name="top_destinations">TOP DESTINATIONS</string>
    <string name="nearby_attractions">Nearby Attractions</string>
    <string name="trip_plan">Trip Plan</string>
    <string name="trips">Trips</string>
    <string name="bookmark">Bookmark</string>
    <string name="see_all">See All</string>
    <string name="a_country_a_city_a_place_or_anything">A country,a city,a place...or anything</string>
    <string name="m_ght_need_these">Mıght Need These</string>
    <string name="sightseeing">Sightseeing</string>
    <string name="resot">Resot</string>
    <string name="restaurant">Restaurant</string>
    <string name="top_pick_articles">TOP-PICK ARTICLES</string>
    <string name="where_next">Where next?</string>
</resources>