<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.search.SearchFragment">

            <TextView
                android:id="@+id/search"
                style="@style/page_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/_45sdp"
                android:text="@string/search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchEdittext"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/search_radius"
                android:hint="@string/where_next"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search">

            </com.google.android.material.textfield.TextInputEditText>

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="324dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/search_screen_icon"
                app:layout_constraintBottom_toBottomOf="@+id/searchEdittext"
                app:layout_constraintEnd_toEndOf="@+id/searchEdittext"
                app:layout_constraintStart_toStartOf="@+id/searchEdittext"
                app:layout_constraintTop_toTopOf="@+id/searchEdittext">


            </ImageButton>

            <TextView
                android:id="@+id/topDestinationsText"
                style="@style/search_screen_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/top_destinations"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchEdittext">

            </TextView>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topDestinationsRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topDestinationsText">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/nearybyAttractionsText"
                style="@style/search_screen_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/_24sdp"
                android:text="@string/nearby_attractions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topDestinationsRecyclerView">

            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/nearybyAttractionsRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nearybyAttractionsText">

            </androidx.recyclerview.widget.RecyclerView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>